# bnd

./: CMakeLists.txt  Cargo.toml
.github/workflows/: CI.yml
bindscrape/: Cargo.toml
bindscrape/src/: config.rs  emit.rs  extract.rs  lib.rs  model.rs
bindscrape/tests/: roundtrip_posixfile.rs
bindscrape/tests/fixtures/posixfile/: posixfile.toml
bindscrape/tests/fixtures/zlib/: zlib.toml
bnd-linux/: Cargo.toml  README.md
bnd-linux-gen/: Cargo.toml  bnd-linux.toml  linux.toml
bnd-linux-gen/src/: lib.rs  main.rs
bnd-linux-gen/tests/: up_to_date.rs
bnd-linux/src/: lib.rs
bnd-linux/src/libc/: mod.rs
bnd-linux/src/libc/linux/: mod.rs
bnd-linux/src/libc/linux/epoll/: mod.rs
bnd-linux/src/libc/linux/sendfile/: mod.rs
bnd-linux/src/libc/linux/signalfd/: mod.rs
bnd-linux/src/libc/linux/timerfd/: mod.rs
bnd-linux/src/libc/linux/xattr/: mod.rs
bnd-linux/src/libc/posix/: mod.rs
bnd-linux/src/libc/posix/dirent/: mod.rs
bnd-linux/src/libc/posix/fcntl/: mod.rs
bnd-linux/src/libc/posix/inet/: mod.rs
bnd-linux/src/libc/posix/mmap/: mod.rs
bnd-linux/src/libc/posix/netdb/: mod.rs
bnd-linux/src/libc/posix/pthread/: mod.rs
bnd-linux/src/libc/posix/sched/: mod.rs
bnd-linux/src/libc/posix/signal/: mod.rs
bnd-linux/src/libc/posix/socket/: mod.rs
bnd-linux/src/libc/posix/stat/: mod.rs
bnd-linux/src/libc/posix/stdio/: mod.rs
bnd-linux/src/libc/posix/time/: mod.rs
bnd-linux/src/libc/posix/types/: mod.rs
bnd-linux/src/libc/posix/unistd/: mod.rs
bnd-linux/src/linux/: mod.rs
bnd-linux/src/linux/epoll/: mod.rs
bnd-linux/src/linux/eventfd/: mod.rs
bnd-linux/src/linux/inotify/: mod.rs
bnd-linux/src/linux/mount/: mod.rs
bnd-linux/src/linux/sendfile/: mod.rs
bnd-linux/src/linux/signalfd/: mod.rs
bnd-linux/src/linux/timerfd/: mod.rs
bnd-linux/src/linux/types/: mod.rs
bnd-linux/src/linux/xattr/: mod.rs
bnd-linux/tests/: epoll_e2e.rs  eventfd_e2e.rs  inotify_e2e.rs  mount_e2e.rs  sendfile_e2e.rs  signalfd_e2e.rs  timerfd_e2e.rs  xattr_e2e.rs
bnd-linux/winmd/: bnd-linux.winmd
bnd-macros/: Cargo.toml  README.md
bnd-macros/src/: lib.rs
bnd-openssl/: Cargo.toml
bnd-openssl-gen/: openssl.toml
bnd-openssl-gen/src/: lib.rs
bnd-openssl/src/: lib.rs
bnd-openssl/src/openssl/bio/: mod.rs
bnd-openssl/src/openssl/bn/: mod.rs
bnd-openssl/src/openssl/crypto/: mod.rs
bnd-openssl/src/openssl/evp/: mod.rs
bnd-openssl/src/openssl/rand/: mod.rs
bnd-openssl/src/openssl/sha/: mod.rs
bnd-openssl/src/openssl/ssl/: mod.rs
bnd-openssl/tests/: bn_e2e.rs  evp_e2e.rs
bnd-openssl/winmd/: bnd-openssl.winmd
bnd-posix/src/posix/dirent/: mod.rs
bnd-posix/src/posix/dl/: mod.rs
bnd-posix/src/posix/inet/: mod.rs
bnd-posix/src/posix/mmap/: mod.rs
bnd-posix/src/posix/netdb/: mod.rs
bnd-posix/src/posix/pthread/: mod.rs
bnd-posix/src/posix/sched/: mod.rs
bnd-posix/src/posix/signal/: mod.rs
bnd-posix/tests/: inet_e2e.rs  mmap_e2e.rs  netdb_e2e.rs  posixfile_e2e.rs  pthread_e2e.rs  signal_e2e.rs  socket_e2e.rs  stat_e2e.rs  time_e2e.rs
bnd-posix/winmd/: bnd-posix.winmd
bnd-winmd/: Cargo.toml
bnd-winmd/src/: config.rs  emit.rs  extract.rs  lib.rs  model.rs
bnd-winmd/tests/: roundtrip_multi.rs  roundtrip_posixfile.rs  roundtrip_simple.rs  roundtrip_validation.rs  roundtrip_zlib.rs
bns-posix/: Cargo.toml
bns-posix-gen/: Cargo.toml
bns-posix-gen/src/: lib.rs  main.rs
bns-posix-gen/tests/: up_to_date.rs
bns-posix/src/: lib.rs
bns-posix/src/PosixFile/: mod.rs
bns-posix/src/PosixFile/Fcntl/: mod.rs
bns-posix/src/PosixFile/Inet/: mod.rs
bns-posix/src/PosixFile/Netdb/: mod.rs
bns-posix/src/PosixFile/Socket/: mod.rs
bns-posix/src/PosixFile/Stat/: mod.rs
bns-posix/src/PosixFile/Unistd/: mod.rs
bns-posix/src/posix/: mod.rs
bns-posix/src/posix/dirent/: mod.rs
bns-posix/src/posix/dl/: mod.rs
bns-posix/src/posix/errno/: mod.rs
bns-posix/src/posix/fcntl/: mod.rs
bns-posix/src/posix/inet/: mod.rs
bns-posix/src/posix/mmap/: mod.rs
bns-posix/src/posix/netdb/: mod.rs
bns-posix/src/posix/pthread/: mod.rs
bns-posix/src/posix/sched/: mod.rs
bns-posix/src/posix/signal/: mod.rs
bns-posix/src/posix/socket/: mod.rs
bns-posix/src/posix/time/: mod.rs
bns-posix/src/posix/unistd/: mod.rs
bns-posix/tests/: dirent_e2e.rs  dl_e2e.rs  errno_e2e.rs  inet_e2e.rs  mmap_e2e.rs  netdb_e2e.rs  posixfile_e2e.rs  pthread_e2e.rs  sched_e2e.rs  signal_e2e.rs  socket_e2e.rs  stat_e2e.rs  time_e2e.rs
docs/: WIP.md
docs/bugs/: element-type-array-mismatch.md  pointer-mutability-lost.md  windows-bindgen-align-vs-packed.md
docs/design/: Background.md  BndLinux.md  BndMacros.md  BndPosix.md  BnsPosix.md  CSharpGenerator.md  CachelineAlignedFix.md  InjectTypes.md  NativeArrayInfo.md  RustGenerator.md  Testing.md
docs/design/bugs/: AnonymousStructArrayField.md  BitfieldLayoutNotPreserved.md  SonarForwardDeclSkipsEnum.md
docs/design/features/: AnonymousUnionFix.md  CachelineAlignedFix.md  CrossWinmdReferences.md  DebuggingFeatures.md  Int128Limitation.md
docs/design/systesting/: FileApis.md  Openssl.md  Sockets.md  Zlib.md  bnd-linux.md  bnd-posix.md  bns-posix.md
docs/guide/: AuthoringBindings.md  ContributingBindings.md
tests/bnd-linux-tests/: Cargo.toml
tests/bnd-linux-tests/tests/: dirent_e2e.rs  dl_e2e.rs  epoll_e2e.rs  errno_e2e.rs  eventfd_e2e.rs  inet_e2e.rs  inotify_e2e.rs  mmap_e2e.rs  mount_e2e.rs  netdb_e2e.rs  posixfile_e2e.rs  pthread_e2e.rs  sched_e2e.rs  sendfile_e2e.rs  signal_e2e.rs  signalfd_e2e.rs  socket_e2e.rs  stat_e2e.rs  stdio_e2e.rs  time_e2e.rs  timerfd_e2e.rs  xattr_e2e.rs
tests/e2e-multi/: Cargo.toml  build.rs
tests/e2e-multi/src/: bindings.rs  lib.rs
tests/e2e-simple/: Cargo.toml  build.rs
tests/e2e-simple/src/: bindings.rs  lib.rs
tests/e2e-zlib/: Cargo.toml  build.rs
tests/e2e-zlib/src/: bindings.rs  lib.rs
tests/fixtures/: simple.h
tests/fixtures/bns-posix/: bns-posix.toml
tests/fixtures/simple/: simple.h  simple.toml
tests/fixtures/unresolved/: unresolved.h  unresolved.toml  unresolved_dep.h
tests/simple-impl/src/: lib.rs
(+4 files in other folders)
