[workspace]
resolver = "2"
members = ["bindscrape", "bns-posix", "bns-posix-gen", "tests/simple-impl", "tests/e2e-simple", "tests/e2e-multi", "tests/e2e-zlib"]

package.edition = "2024"
package.authors = [ "youyuanwu@outlook.com" ]
package.documentation = "https://github.com/youyuanwu/bindscrape"
package.repository = "https://github.com/youyuanwu/bindscrape"
package.license = "MIT"

[workspace.dependencies]
