[workspace]
resolver = "2"
members = ["bnd-winmd", "bns-posix", "bns-posix-gen", "tests/simple-impl", "tests/e2e-simple", "tests/e2e-multi", "tests/e2e-zlib"]

package.edition = "2024"
package.authors = [ "youyuanwu@outlook.com" ]
package.documentation = "https://github.com/youyuanwu/bindscrape"
package.repository = "https://github.com/youyuanwu/bindscrape"
package.license = "MIT"

[workspace.dependencies]
anyhow = "1"
bnd-winmd = { path = "bnd-winmd" }
clang = { version = "2", features = ["clang_10_0"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
simple-impl = { path = "tests/simple-impl" }
tempfile = "3"
toml = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
windows-bindgen = "0.66"
windows-link = "0.2"
windows-metadata = "0.59"
