[package]
name = "bnd-linux-gen"
version = "0.1.0"
edition.workspace = true
description = "Generator that produces the bnd-linux crate from Linux system headers"
authors.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
bnd-winmd.workspace = true
tracing-subscriber.workspace = true
windows-bindgen.workspace = true

[dev-dependencies]
tempfile.workspace = true
