[package]
name = "bnd-linux"
version = "0.0.1"
edition.workspace = true
description = "Rust FFI bindings for POSIX and Linux system APIs generated as WinMD metadata"
authors.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
windows-link.workspace = true

[features]
Foundation = []
# generated features
linux = ["Foundation"]
linux_epoll = ["linux"]
linux_eventfd = ["linux"]
linux_inotify = ["linux"]
linux_mount = ["linux"]
linux_sendfile = ["linux"]
linux_signalfd = ["linux"]
linux_timerfd = ["linux"]
linux_types = ["linux"]
linux_xattr = ["linux"]
posix = ["Foundation"]
posix_dirent = ["posix"]
posix_dl = ["posix"]
posix_errno = ["posix"]
posix_fcntl = ["posix"]
posix_inet = ["posix"]
posix_mmap = ["posix"]
posix_netdb = ["posix"]
posix_pthread = ["posix"]
posix_sched = ["posix"]
posix_signal = ["posix"]
posix_socket = ["posix"]
posix_stat = ["posix"]
posix_stdio = ["posix"]
posix_time = ["posix"]
posix_types = ["posix"]
posix_unistd = ["posix"]
