[package]
name = "bnd-openssl"
version = "0.0.1"
edition.workspace = true
description = "Rust FFI bindings for OpenSSL (libssl + libcrypto)"
authors.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
bnd-linux = { path = "../bnd-linux", features = ["posix_time", "posix_stdio", "posix_pthread", "posix_types"] }
bnd-macros.workspace = true

[features]
default = ["bio", "bn", "crypto", "evp", "rand", "sha", "ssl", "types"]
Foundation = []
# generated features
bio = ["Foundation"]
bn = ["Foundation"]
crypto = ["Foundation"]
evp = ["Foundation"]
rand = ["Foundation"]
sha = ["Foundation"]
ssl = ["Foundation"]
types = ["Foundation"]
