[package]
name = "bnd-winmd"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "bnd_winmd"
path = "src/lib.rs"

[[bin]]
name = "bnd-winmd"
path = "src/bin/bnd-winmd.rs"

[dependencies]
anyhow.workspace = true
clang.workspace = true
clap.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
windows-metadata.workspace = true
