[package]
name = "bnd-winmd"
version = "0.0.3"
edition.workspace = true
description = "Generate winmd from c headers"
authors.workspace = true
documentation.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"

[lib]
name = "bnd_winmd"
path = "src/lib.rs"

[[bin]]
name = "bnd-winmd"
path = "src/bin/bnd-winmd.rs"

[dependencies]
anyhow.workspace = true
clang.workspace = true
clap.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
windows-metadata.workspace = true
