[package]
name = "bns-posix"
version = "0.1.0"
edition.workspace = true
description = "POSIX system bindings generated as WinMD metadata"
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
windows-link = "0.2"

[features]
default = ["Dirent", "Fcntl", "Inet", "Mmap", "Netdb", "Socket", "Stat", "Unistd"]
Foundation = []
# generated features
Dirent = ["Foundation"]
Fcntl = ["Foundation"]
Inet = ["Foundation"]
Mmap = ["Foundation"]
Netdb = ["Foundation"]
Socket = ["Foundation"]
Stat = ["Foundation"]
Unistd = ["Foundation"]
