[package]
name = "bns-posix"
version = "0.1.0"
edition.workspace = true
description = "POSIX system bindings generated as WinMD metadata"
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
windows-link.workspace = true

[features]
default = ["dirent", "fcntl", "inet", "mmap", "netdb", "socket", "stat", "unistd"]
Foundation = []
# generated features
dirent = ["Foundation"]
fcntl = ["Foundation"]
inet = ["Foundation"]
mmap = ["Foundation"]
netdb = ["Foundation"]
socket = ["Foundation"]
stat = ["Foundation"]
unistd = ["Foundation"]
