[package]
name = "bns-posix"
version = "0.1.0"
edition.workspace = true
description = "POSIX system bindings generated as WinMD metadata"
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
windows-link.workspace = true

[features]
default = ["dirent", "dl", "errno", "fcntl", "inet", "mmap", "netdb", "pthread", "sched", "signal", "socket", "stat", "time", "types", "unistd"]
Foundation = []
# generated features
dirent = ["Foundation"]
dl = ["Foundation"]
errno = ["Foundation"]
fcntl = ["Foundation"]
inet = ["Foundation"]
mmap = ["Foundation"]
netdb = ["Foundation"]
pthread = ["Foundation"]
sched = ["Foundation"]
signal = ["Foundation"]
socket = ["Foundation"]
stat = ["Foundation"]
time = ["Foundation"]
types = ["Foundation"]
unistd = ["Foundation"]
